# HotplateController

./: .gitignore  .gitmodules  CLAUDE.md  ClaudeMetal.md  README.md  ToDo.md  main.py  pyproject.toml
claude_test/: README.md  check_setpoints.py  poke_server.py  verify_device.py
claude_test/tests/: test_server.py
docs/: server_api.md
hotplate_controller/: __init__.py  limits.py  rct_digital.py
tests/: test_rct_digital.py
